
New features:
* Interactive 3D landmarking/POI (point of interest) selection: New functions
mesh_mark_pois and drop_poi enable the interactive selection of points of
interest on a mesh surface.
* Ray tracing: New function mesh_trace_ray for determining exact intersection
points between rays and a mesh surface.
* New function split_pts to split a point cloud by a 3D plane. The function
encapsulates code from the edgesOnPlane and is similar to Morpho::cutSpace, but
runs substantially faster.

Other changes:
* Documentation: Added support for markdown and migrated existing documentation to the new format.
* Documentation: Added support for lifecycle badges.
* Tests: Changed testing framework to testthat 3rd edition.
* Tests: Added new unit tests.
* Split edgesOnPlane function, moving code into the new split_pts function.
* Added unit test for the new split_pts function.
* mesh_volume and getTVol: The return on bad input changed from NaN to NA.
* Compressed the demo data to reduce the size of the package.


Lithics3D v0.4.2 (Release date: 2019-04-20)
==============

New features:
* sPathQuery now has an option to request closed curves. The documentation has also been improved.

Other changes:
* mesh_segment_by_path now takes input of sPathConnect as argument (mesh.path) instead of calling that function internally. The former functionality still exists, but is being deprecated and using the old
lms argument will result in a warning.
* mapOnMesh now outputs target vertices as a column (named vertex). Rownames will continue working, but should not be relied on.
* Changed the behaviour of sPathQuery - it will now fail if path.choice is not one of the valid options, instead of silently picking "any". This behaviour was properly documented, but made little sense.
* Added unit test for sPathQuery
* alignMesh.PCA: Deprecated in favour of the pcAlign function provided by the Morpho package; It offered no additional functionality. Note