@@ -7,7 +7,7 @@ Maintainer: Cornel M. Pop <pop.cornelm@gmail.com>
 URL: https://github.com/cornelmpop/Lithics3D
 BugReports: https://github.com/cornelmpop/Lithics3D/issues
 Description: A collection of functions for working with and analyzing 3D scans of archaeological lithics.
-Depends: R (>= 4.2.2)
+Depends: R (>= 4.2.0)
 Imports: 
     Matrix (>= 1.5-1),
     Morpho (>= 2.10),
@@ -18,7 +18,7 @@ Imports:
     igraph (>= 1.3.4),
     Rvcg (>= 0.21),
     data.table (>= 1.14.2),
-    rgl (>= 0.109.6),
+    rgl (>= 1.2.1),
     ggplot2 (>= 3.3.6),
     lifecycle
 License: file LICENSE
